# yew-highlight

./: Cargo.toml  README.md
example/: Cargo.toml  index.html
example/src/: lib.rs  main.rs
src/: highlighted.rs  lib.rs  native_worker.rs
static/: worker.js
