[package]
name = "yew-highlight"
version = "0.1.0"
authors = ["Hamza <muhammadhamza1311@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2"
yew = { git = "https://github.com/yewstack/yew/", branch = "master" }
web-sys = { version = "0.3", features = ["HtmlMetaElement", "Document", "Element", "DocumentFragment", "HtmlTemplateElement"] }
serde = "1.0"

[dependencies.syntect]
version = "4.4"
default-features = false
features = [
    "html",
    "dump-load",
    "regex-fancy"
]

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
